Closed Bug 902236 Opened 11 years ago Closed 11 years ago

Fix an exact rooting hazard in ~XPCShellEnvironment

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file)

This needs a root because of the JSAutoCompartment.
Attachment #786615 - Flags: review?(jcoppeard)
Attachment #786615 - Flags: review?(jcoppeard) → review+
https://hg.mozilla.org/mozilla-central/rev/989e22c0d3cd
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: