Bug 902236 - Fix an exact rooting hazard in ~XPCShellEnvironment; r=jonco